talos/immich/resources/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-body-size
  namespace: immich
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
